--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,15 @@
   --white-accent: #fff;
   --main-color: #212121;
   --secondary-color: #757575;
+  --black-color: #000;
+  --button-hover: #188ce8;
+  --background-grey: #2f303a;
   --background-btn: #f5f4fa;
 }
 body {
   font-family: Roboto, sans-serif;
   color: var(--main-color);
+  font-size: 14px;
 }
 .link {
   text-decoration: none;
@@ -22,19 +26,18 @@ body {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-  color: #000;
+  color: var(--accent-color);
 }
 .logo-span {
-  color: var(--accent-color);
+  color: var(--black-color);
 }
 .header-item {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.list .link:hover,
-.list .link:focus {
+.header-item:hover,
+.header-item:focus {
   color: var(--accent-color);
 }
 .active {
@@ -51,7 +54,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-accent);
-  background-color: #2f303a;
+  background-color: var(--background-grey);
 }
 .hero-btn {
   font-weight: 700;
@@ -62,6 +65,14 @@ body {
   color: var(--white-accent);
   background-color: var(--accent-color);
   cursor: pointer;
+  border-style: none;
+}
+.hero-btn:hover,
+.hero-btn:focus {
+  background-color: var(--button-hover);
+}
+.header-hidden {
+  visibility: hidden;
 }
 .benefits-header {
   font-weight: 700;
@@ -71,7 +82,6 @@ body {
   text-transform: uppercase;
 }
 .benefits-text {
-  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-color);
@@ -98,12 +108,18 @@ body {
 
   color: var(--secondary-color);
 }
+.footer {
+  background-color: var(--background-grey);
+}
 .address-link {
-  font-size: 14px;
+  font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--white-accent);
-  background-color: #2f303a;
+}
+.address-link:hover,
+.address-link:focus {
+  color: var(--accent-color);
 }
 .footer-contacts {
   color: rgba(255, 255, 255, 0.6);
@@ -117,8 +133,11 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   background-color: var(--background-btn);
+  border-style: none;
   cursor: pointer;
 }
+.filter-btn:hover,
+.filter-btn:focus,
 .active-btn {
   color: var(--white-accent);
   background-color: var(--accent-color);
@@ -132,6 +151,6 @@ body {
 .card-text {
   color: var(--secondary-color);
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.88;
   letter-spacing: 0.03em;
 }
