footer logo color

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body {
 .list {
   list-style-type: none;
 }
+/* Header */
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -46,6 +47,7 @@ body {
 .header-contacts {
   color: var(--secondary-color);
 }
+/* Hero section */
 .hero-title {
   font-weight: 900;
   font-size: 44px;
@@ -71,6 +73,7 @@ body {
 .hero-btn:focus {
   background-color: var(--button-hover);
 }
+/* Benefits section */
 .header-hidden {
   visibility: hidden;
 }
@@ -93,6 +96,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
+/* Team section */
 .member-header {
   font-weight: 500;
   font-size: 16px;
@@ -108,8 +112,12 @@ body {
 
   color: var(--secondary-color);
 }
+/* Footer section */
 .footer {
   background-color: var(--background-grey);
+}
+.white-span {
+  color: var(--white-accent);
 }
 .address-link {
   font-style: normal;
@@ -125,7 +133,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-/* Портфолио */
+/* Portfolio */
 .filter-btn {
   font-weight: 500;
   font-size: 16px;
