--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ body {
   background-color: var(--background-grey);
 }
 .hero-btn {
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -135,6 +136,7 @@ body {
 
 /* Portfolio */
 .filter-btn {
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
